removed/replaced deprecated new Boolean() call